package com.my.studydesignpattern.chapter8.practice2;

public interface Command {

    void execute();

}
