package com.my.studydesignpattern.chapter8.practice2;public class Power {
}
