@startuml

class TwoButtonController {
- command1 : Command
- command2 : Command
+ TwoButtonController(command1 : Command, command2 : Command)
+ button1() : void
+ button2() : void
}

interface Command {
+ execute() : void
}

class Power {
+ excute() : void
}

class Mute {
+ excute() : void
}

class TV {
- powerOn : boolean
- muteOn : boolean
+ power() : void
+ mute() : void
}

TwoButtonController *-> Command
Command <.. Power
Command <.. Mute

Power ..> TV
Mute ..> TV


@enduml
